<resources>
	<string name="app_name">Pokémon</string>

	<string name="bottom_home_item">Accueil</string>
	<string name="bottom_collection_item">Collection</string>
	<string name="bottom_add_pokemon_item">Ajouter</string>

	<!--Page d'accueil-->
	<string name="home_page_title">A découvrir</string>

	<!--Pokémon - Accueil-->
	<string name="home_page_last_pokemon_section">Dernier pokémon</string>
	<string name="home_page_pokemon_name">Nom du pokémon</string>
	<string name="home_page_pokemon_description">Description</string>

	<!--Page de collection-->
	<string name="collection_page_title">Ma collection</string>

	<!--Page d'ajout de pokémon-->
	<string name="add_pokemon_page_title">Ajout d\'un pokémon</string>
	<string name="add_pokemon_page_upload_button">Charger une image</string>
	<string name="add_pokemon_page_name_input">@string/item_pokemon_name</string>
	<string name="add_pokemon_page_description_input">@string/item_pokemon_description</string>

	<string-array name="add_pokemon_page_tall_spinner_input">
		<item>Taille : Grande</item>
		<item>Taille : Moyenne</item>
		<item>Taille : Petite</item>
	</string-array>

	<string-array name="add_pokemon_page_power_spinner_input">
		<item>Puissance : Importante</item>
		<item>Puissance : Moyenne</item>
		<item>Puissance : Faible</item>
	</string-array>

	<string name="add_pokemon_page_confirm">Confirmer</string>

	<!--Pokémon custom-->
	<string name="item_pokemon_name">Nom du pokémon</string>
	<string name="item_pokemon_description">Type</string>

	<!--Fenetre de détail-->
	<string name="popup_pokemon_name">@string/item_pokemon_name</string>
	<string name="popup_pokemon_description_title">Type</string>
	<string name="popup_pokemon_description_subtitle">Electrique - Feu - Eau - …</string>
	<string name="popup_pokemon_tall_title">Taille</string>
	<string name="popup_pokemon_tall_subtitle">Grande - Moyenne - Petite</string>
	<string name="popup_pokemon_power_title">Puissance</string>
	<string name="popup_pokemon_power_subtitle">Importante - Moyenne - Faible</string>
	<string name="popup_pokemon_sex_title">Sexe</string>
	<string name="popup_pokemon_sex_subtitle">Mâle - Femelle - Indéterminé</string>
	<string name="popup_pokemon_avis_title">Avis</string>
	<string name="popup_pokemon_avis_subtitle">Un bon pokémon</string>
	<string name="popup_pokemon_star_button">Like</string>
	<string name="popup_pokemon_delete_button">Supprimer</string>
	<string name="popup_pokemon_image">Image du pokémon</string>
</resources>