<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="360dp"
	android:layout_height="600dp"
	android:background="@color/white"
	android:padding="@dimen/item_margin">

	<androidx.cardview.widget.CardView
		android:id="@+id/cardView"
		android:layout_width="80dp"
		android:layout_height="80dp"
		app:cardCornerRadius="8dp"
		app:cardElevation="4dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/image_item"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scaleType="centerCrop"
			android:src="@drawable/trending1"
			android:contentDescription="@string/popup_pokemon_image" />
	</androidx.cardview.widget.CardView>

	<TextView
		android:id="@+id/popup_pokemon_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="12dp"
		android:text="@string/popup_pokemon_name"
		style="@style/title_text_style"
		app:layout_constraintBottom_toBottomOf="@+id/cardView"
		app:layout_constraintStart_toEndOf="@+id/cardView"
		app:layout_constraintTop_toTopOf="@+id/cardView"/>

	<ImageView
		android:id="@+id/close_button"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/ic_close"
		android:layout_marginEnd="@dimen/default_margin"
		app:layout_constraintBottom_toBottomOf="@+id/cardView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/cardView"/>

	<TextView
		android:id="@+id/popup_pokemon_description_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_description_title"
		android:layout_marginTop="@dimen/default_margin"
		android:layout_marginStart="@dimen/default_margin"
		style="@style/title_text_style"
		app:layout_constraintStart_toStartOf="@+id/cardView"
		app:layout_constraintTop_toBottomOf="@+id/cardView"/>

	<TextView
		android:id="@+id/popup_pokemon_description_subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_description_subtitle"
		style="@style/default_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_description_title"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_description_title"/>

	<TextView
		android:id="@+id/popup_pokemon_tall_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/default_margin"
		android:text="@string/popup_pokemon_tall_title"
		style="@style/title_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_description_subtitle"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_description_subtitle"/>

	<TextView
		android:id="@+id/popup_pokemon_tall_subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_tall_subtitle"
		style="@style/default_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_tall_title"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_tall_title"/>

	<TextView
		android:id="@+id/popup_pokemon_power_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/default_margin"
		android:text="@string/popup_pokemon_power_title"
		style="@style/title_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_tall_subtitle"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_tall_subtitle"/>

	<TextView
		android:id="@+id/popup_pokemon_power_subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_power_subtitle"
		style="@style/default_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_power_title"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_power_title"/>

	<TextView
		android:id="@+id/popup_pokemon_sex_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_sex_title"
		android:layout_marginTop="@dimen/default_margin"
		style="@style/title_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_power_subtitle"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_power_subtitle"/>

	<TextView
		android:id="@+id/popup_pokemon_sex_subtitle"
		style="@style/default_text_style"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_sex_subtitle"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_sex_title"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_sex_title"/>

	<TextView
		android:id="@+id/popup_pokemon_avis_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_avis_title"
		android:layout_marginTop="@dimen/default_margin"
		style="@style/title_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_sex_subtitle"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_sex_subtitle"/>

	<TextView
		android:id="@+id/popup_pokemon_avis_subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/popup_pokemon_avis_subtitle"
		style="@style/default_text_style"
		app:layout_constraintStart_toStartOf="@+id/popup_pokemon_avis_title"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_avis_title"/>

	<View
		android:id="@+id/view_separation"
		android:layout_width="1dp"
		android:layout_height="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/popup_pokemon_avis_subtitle" />

	<ImageView
		android:id="@+id/delete_button"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/ic_trash"
		android:layout_marginStart="40dp"
		android:contentDescription="@string/popup_pokemon_delete_button"
		app:layout_constraintBottom_toBottomOf="@+id/view_separation"
		app:layout_constraintEnd_toStartOf="@+id/view_separation"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/view_separation"/>

	<ImageView
		android:id="@+id/star_button"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/ic_unlike"
		android:layout_marginEnd="40dp"
		android:contentDescription="@string/popup_pokemon_star_button"
		app:layout_constraintBottom_toBottomOf="@+id/view_separation"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/view_separation"
		app:layout_constraintTop_toTopOf="@+id/view_separation"/>
</androidx.constraintlayout.widget.ConstraintLayout>